Bazel file builds but am unable to run will continue work at home